--- a/app/src/main/res/layout/new_student_dialog.xml
+++ b/app/src/main/res/layout/new_student_dialog.xml
@@ -13,7 +13,8 @@
         <EditText
             android:id="@+id/editTxtName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:maxLines="1">
 
             <requestFocus />
 
